--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,5 @@
 host=172.18.144.1:8111
-superUserToken=2200666769373314092
+superUserToken=8402204851182880745
+browser=chrome
+remote=http://localhost:4444/wd/hub
+browserSize=1920x1080
