--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,10 @@ allure-results/
 
 
 ### IntelliJ IDEA ###
-.idea/
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
 *.iws
 *.iml
 *.ipr
