--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,17 @@ jobs:
   # Собирается бекенд и деплоится на стейдж/review app
   frontend:
     uses: ./.github/workflows/frontend-stage.yml
+
+  # Прогоняются API тесты
+  automation-api:
+    needs: [ backend, frontend ]
+    uses: ./.github/workflows/automation.yml
+    with:
+      package: api
+
+  # Прогоняются UI тесты
+  automation-ui:
+    needs: [ backend, frontend ]
+    uses: ./.github/workflows/automation.yml
+    with:
+      package: ui
