--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-host=172.18.144.1:8111
-superUserToken=1577162350010173757
+#host=172.18.144.1:8111
+#superUserToken=1577162350010173757
 browser=chrome
 remote=http://localhost:4444/wd/hub
 browserSize=1920x1080
