Make mvnw executable in action.yml

--- a/.github/actions/teamcity-setup/action.yml
+++ b/.github/actions/teamcity-setup/action.yml
@@ -70,6 +70,10 @@ runs:
       # Настройка сервера при первом запуске (принятие лицензии, выбор базы данных и тд), реализованная в виде теста
       run: ./mvnw clean test -Dtest=SetupServerTest#setupTeamCityServerTest
 
+    - name: Make mvnw executable
+      shell: bash
+      run: chmod +x mvnw
+
     - name: Setup superUserToken environment variable
       shell: bash
       run: echo "SUPER_USER_TOKEN=$(docker logs teamcity-server | grep 'Super user authentication token' | tail -n 1 | awk '{print $6}')" >> $GITHUB_ENV
