--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,3 +24,18 @@ jobs:
     uses: ./.github/workflows/automation.yml
     with:
       package: ui
+
+  manual-prod-aprooval:
+    needs: [ automation-api, automation-ui]
+    runs-on: ubuntu-latest
+    environment: 'prod'
+    steps:
+      - name: Approve backend and frontend to production
+        run: echo Approved to production
+
+  #Deploy frontend and backend on prod
+  deploy-prod:
+    needs: manual-prod-aprooval
+    uses: ./.github/workflows/deploy-prod.yml
+
+
