--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-#host=172.18.144.1:8111
-#superUserToken=1922738640975357256
+host=172.18.144.1:8111
+superUserToken=6363037708431767092
 browser=chrome
 remote=http://localhost:4444/wd/hub
 browserSize=1920x1080
